syntax = "proto3";

package kritor.friend;

option csharp_namespace = "Kritor.Friend";
option java_multiple_files = true;
option java_package = "io.kritor.friend";
option go_package = "grpc/kritor/friend";

message FriendInfo {
  string uid = 1; // uid 'u_*********'
  uint64 uin = 2; // qq 如果没有可不提供
  string qid = 3; // qid 用户自定义的qid 如若没有则为空

  string nick = 4;     // 名称
  string remark = 5;   // 备注
  uint32 level = 6;    // 等级
  uint32 age = 7;      // 年龄
  uint32 vote_cnt = 8; // 赞数量
  int32 gender = 9;    // 性别 可不提供
  int32 group_id = 10; // 好友分组id

  
  optional ExtInfo ext = 99; // 扩展信息，根据协议平台提供的扩展信息
}

message ProfileCard {
  string uid = 1;
  uint64 uin = 2;
  string qid = 3;

  string nick = 4;
  optional string remark = 5;
  uint32 level = 6;
  optional uint64 birthday = 7;
  uint32 login_day = 8; // 登录天数
  uint32 vote_cnt = 9;  // 点赞数

  /* 以下字段可以不实现 */
  optional bool is_school_verified = 51;
  optional ExtInfo ext = 99; // 扩展信息，根据协议平台提供的扩展信息
}

// 通用好友信息扩展字段
// 所有第三方协议分发扩展字段，
// 必须基于本字段修改，
// 并保存定制的副本到本仓库特定路径！！
message ExtInfo {
  optional bool big_vip = 1;       // 大会员
  optional bool hollywood_vip = 2; // 好莱坞/腾讯视频会员
  optional bool qq_vip = 3;        // QQ会员
  optional bool super_vip = 4;     // QQ超级会员
  optional bool voted = 5;         // 是否已经赞过
}