syntax = "proto3";

package kritor.web;

option csharp_namespace = "Kritor.Web";
option java_multiple_files = true;
option java_package = "io.kritor.web";
option go_package = "grpc/kritor/web";

service WebService {
  rpc GetCookies(GetCookiesRequest) returns (GetCookiesResponse); // 获取通用cookie
  rpc GetCredentials(GetCredentialsRequest) returns (GetCredentialsResponse); // 获取bkn参数与cookie
  rpc GetCSRFToken(GetCSRFTokenRequest) returns (GetCSRFTokenResponse); // 获取bkn
  rpc GetHttpCookies(GetHttpCookiesRequest) returns (GetHttpCookiesResponse); // 获取http请求的cookie
}

message GetCookiesRequest {
  optional string domain = 1; // The domain to get cookies from
}

message GetCookiesResponse {
  string cookie = 1;
}

message GetCredentialsRequest {
  optional string domain = 1; // The domain to get credentials from
}

message GetCredentialsResponse {
  string bkn = 1;
  string cookie = 2;
}

message GetCSRFTokenRequest {
  optional string domain = 1; // The domain to get the CSRF token from
}

message GetCSRFTokenResponse {
  string bkn = 1;
}

message GetHttpCookiesRequest {
  string appid = 1;
  string daid = 2;
  string jump_url = 3;
}

message GetHttpCookiesResponse {
  string cookie = 1;
}